RESOLVED FIXED191642
REGRESSION(r238178): fast/forms/access-key-mutated.html and fast/forms/access-key-case-insensitive.html are timing out
https://bugs.webkit.org/show_bug.cgi?id=191642
Summary REGRESSION(r238178): fast/forms/access-key-mutated.html and fast/forms/access...
Antti Koivisto
Reported 2018-11-14 11:11:11 PST
The changes in https://trac.webkit.org/changeset/238178/webkit has caused these two tests to begin timing out on MacOS Release WK2: fast/forms/access-key-mutated.html fast/forms/access-key-case-insensitive.html Repro Command: run-webkit-tests --root testbuild-238178 fast/forms/access-key-mutated.html fast/forms/access-key-case-insensitive.html --iterations 5 -f
Attachments
patch (4.58 KB, patch)
2018-11-15 01:20 PST, Antti Koivisto
zalan: review+
commit-queue: commit-queue-
Truitt Savell
Comment 1 2018-11-14 11:39:48 PST
additionally accessibility/mac/selection-notification-focus-change.html is also failing constantly now in those same configurations History https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=accessibility%2Fmac%2Fselection-notification-focus-change.html Diff: --- /Volumes/Data/slave/sierra-release-tests-wk2/build/layout-test-results/accessibility/mac/selection-notification-focus-change-expected.txt +++ /Volumes/Data/slave/sierra-release-tests-wk2/build/layout-test-results/accessibility/mac/selection-notification-focus-change-actual.txt @@ -7,9 +7,9 @@ eventSender.keyDown(tabCharacter); Received AXSelectedTextChanged PASS userInfo["AXTextSelectionChangedFocus"] is true +Received AXFocusChanged Received AXSelectedTextChanged PASS userInfo["AXTextSelectionChangedFocus"] is true -Received AXFocusChanged PASS accessibilityController.accessibleElementById("1").isFocusable is true accessibilityController.accessibleElementById("1").takeFocus()
Antti Koivisto
Comment 2 2018-11-14 11:47:25 PST
Truitt Savell
Comment 3 2018-11-14 11:49:00 PST
Looks like this is going to effect debug too. fast/forms/access-key-case-insensitive.html and fast/forms/access-key-mutated.html shows a timeout on Sierra Debug WK2
Antti Koivisto
Comment 4 2018-11-14 11:53:41 PST
The tests are skipped on all platforms
Ryan Haddad
Comment 5 2018-11-14 13:38:59 PST
(In reply to Antti Koivisto from comment #2) > Skipped that too in https://trac.webkit.org/r238189 Moved the skip to mac-wk2 in https://trac.webkit.org/r238194 (since accessibility/mac is marked as pass in platform/mac, r238189 didn't do anything).
Antti Koivisto
Comment 6 2018-11-15 01:20:34 PST
WebKit Commit Bot
Comment 7 2018-11-15 05:32:44 PST
Comment on attachment 354902 [details] patch Rejecting attachment 354902 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 354902, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: https://webkit-queues.webkit.org/results/10002856
Antti Koivisto
Comment 8 2018-11-15 05:58:18 PST
Radar WebKit Bug Importer
Comment 9 2018-11-15 05:59:29 PST
Simon Fraser (smfr)
Comment 10 2018-11-15 09:47:42 PST
Comment on attachment 354902 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=354902&action=review > Source/WebCore/dom/Document.cpp:1808 > + // FIXME: Why on earth is this here? This is clearly misplaced. > + invalidateAccessKeyMap(); Hahahah
Note You need to log in before you can comment on or make changes to this bug.