REGRESSION(r238178): fast/forms/access-key-mutated.html and fast/forms/access-key-case-insensitive.html are timing out https://bugs.webkit.org/show_bug.cgi?id=191642

Reviewed by Zalan Bujtas.

Source/WebCore:

Invalidate access key map even when thorttling style recalcs.

* dom/Document.cpp:
(WebCore::Document::scheduleStyleRecalc):

LayoutTests:

* TestExpectations: Unskip
* platform/mac-wk2/TestExpectations: Unskip
* platform/mac-wk2/accessibility/mac/selection-notification-focus-change-expected.txt:

Rebase. Focus timings depends on layout timings.



Canonical link: https://commits.webkit.org/206425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238223 268f45cc-cd09-0410-ab3c-d52691b4dbfc